--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="fr">
 
 <head>
-    
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <title>TryOn Now !</title>
     <link rel="icon" href= "img/logof1.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
     <link rel="stylesheet" href="css/animate.css">
+    <!-- swiper CSS -->
+    <link rel="stylesheet" href="css/swiper.css">
     <!-- owl carousel CSS -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- themify CSS -->
@@ -23,6 +26,26 @@
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
+    <style>
+       .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+    </style>
 </head>
 
 <body>
@@ -80,7 +103,7 @@
                 </div>
                 <div class="col-xl-6 col-md-6">
                     <div class="banner_bg">
-                        <img src="img/FIRSTIMG.png" alt="banner">
+                        <img src="img/source.gif"  alt="banner">
                     </div>
                 </div>
             </div>
@@ -93,7 +116,70 @@
     <!-- banner part start-->
 
     <!-- cta part start-->
-   
+   <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+          <img src="img/nike.png" alt="">
+            <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Nike's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Nike's Website
+                  </label>
+                  </div>
+            </div>
+        </div>
+      <div class="swiper-slide"><img src="img/puma.png" alt="">
+        <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Puma's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Puma's Website
+                  </label>
+                  </div>
+            </div>
+          </div>
+      <div class="swiper-slide"><img src="img/adidas" alt="">
+        <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Adidas's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Adidas's Website
+                  </label>
+                  </div>
+            </div>
+          </div>
+      <div class="swiper-slide">
+          <img src="img/levis.png" alt="">
+          <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Levi's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Levi's Website
+                  </label>
+                  </div>
+            </div>
+          </div>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+  </div>
+
     <!-- cta part end-->
 
    
@@ -669,7 +755,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
     <!-- jquery plugins here-->
     <!-- jquery -->
-    <script src="js/jquery-1.12.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- popper js -->
     <script src="js/popper.min.js"></script>
     <!-- bootstrap js -->
@@ -687,8 +773,21 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/owl.carousel2.thumbs.min.js"></script>
     <!-- swiper js -->
     <script src="js/slick.min.js"></script>
+
     <!-- custom js -->
     <script src="js/custom.js"></script>
+    <script>
+    var swiper = new Swiper('.swiper-container', {
+        pagination: '.swiper-pagination',
+        paginationClickable: true,
+        nextButton: '.swiper-button-next',
+        prevButton: '.swiper-button-prev',
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: 2500,
+        autoplayDisableOnInteraction: false
+    });
+    </script>
 </body>
 
 </html>
