--- a/project.html
+++ b/project.html
@@ -1,16 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Kanox</title>
-    <link rel="icon" href="img/favicon.png">
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+    <title>TryOn Now !</title>
+    <link rel="icon" href= "img/logof1.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
     <link rel="stylesheet" href="css/animate.css">
+    <!-- swiper CSS -->
+    <link rel="stylesheet" href="css/swiper.css">
     <!-- owl carousel CSS -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- themify CSS -->
@@ -24,16 +25,37 @@
     <link rel="stylesheet" href="css/all.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
+    <style>
+       .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+    </style>
 </head>
 
 <body>
     <!--::header part start::-->
-    <header class="main_menu">
+    <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="index.html"> <img class="logo" src="img/logof1.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -44,32 +66,19 @@
                             id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="index.html">Welcome</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="about.html">About us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">Services</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="project.html">Portfolio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="blog.html">Blog</a>
+                                    <a class="nav-link" href="project.html">Brands</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        pages
+                                        Help & Information
                                     </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                        <a class="dropdown-item" href="elements.html">Elements</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
+                                   
                             </ul>
                         </div>
                     </nav>
@@ -79,108 +88,71 @@
     </header>
     <!-- Header part end-->
 
-     <!-- breadcrumb start-->
-     <section class="breadcrumb breadcrumb_bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb_iner text-center">
-                        <div class="breadcrumb_iner_item">
-                            <h2>REcent project</h2>
-                            <p>Home <span>//</span>project</p>
-                        </div>
-                    </div>
-                </div>
+        <!-- cta part start-->
+   <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+          <img src="img/nike.png" alt="">
+            <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Nike's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Nike's Website
+                  </label>
+                  </div>
             </div>
         </div>
-    </section>
-    <!-- breadcrumb start-->
-
-    <!-- our_latest_work part start-->
-    <section class="our_latest_work section_padding">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-lg-5">
-                    <div class="section_tittle text-center">
-                        <p>recent work</p>
-                        <h2>Creative work for client</h2>
-                    </div>
-                </div>
+      <div class="swiper-slide"><img src="img/puma.png" alt="">
+        <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Puma's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Puma's Website
+                  </label>
+                  </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="single_work">
-                        <div class="row align-items-center">
-                            <div class="offset-lg-1 col-lg-4 col-md-6">
-                                <div class="single_work_demo">
-                                    <h5>Mockup design</h5>
-                                    <h3>It under itself day whales waters our divide third brought</h3>
-                                    <p>Place isn't heaven firmament divided shall fruitful bring bring may midst
-                                        every a night dry herb. Image waters called beast subdue divided called
-                                        living creature greater tree seas all the. Hath multiply female you're
-                                        male likeness his made open beast seas living moved, form.
-                                        Void stars you our dominion </p>
-                                    <a href="project_details.html" class="btn_3">learn more <span class="flaticon-slim-right"></span> </a>
-                                </div>
-                            </div>
-                            <div class="offset-lg-1 col-lg-6 col-md-6">
-                                <div class="demo_img">
-                                    <img src="img/demo/demo_1.png" alt="demo">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_work">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6 col-md-6">
-                                <div class="demo_img">
-                                    <img src="img/demo/demo_2.png" alt="demo">
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-6">
-                                <div class="single_work_demo">
-                                    <h5>Mockup design</h5>
-                                    <h3>Saw i very dominion whose female
-                                        was light divided multiply</h3>
-                                    <p>Place isn't heaven firmament divided shall fruitful bring bring may midst
-                                        every a night dry herb. Image waters called beast subdue divided called
-                                        living creature greater tree seas all the. Hath multiply female you're
-                                        male likeness his made open beast seas living moved, form.
-                                        Void stars you our dominion </p>
-                                    <a href="project_details.html" class="btn_3">learn more <span class="flaticon-slim-right"></span> </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_work">
-                        <div class="row align-items-center">
-                            <div class="offset-lg-1 col-lg-4 col-md-6">
-                                <div class="single_work_demo">
-                                    <h5>Mockup design</h5>
-                                    <h3>It under itself day whales waters our divide third brought</h3>
-                                    <p>Place isn't heaven firmament divided shall fruitful bring bring may midst
-                                        every a night dry herb. Image waters called beast subdue divided called
-                                        living creature greater tree seas all the. Hath multiply female you're
-                                        male likeness his made open beast seas living moved, form.
-                                        Void stars you our dominion </p>
-                                    <a href="project_details.html" class="btn_3">learn more <span class="flaticon-slim-right"></span> </a>
-                                </div>
-                            </div>
-                            <div class="offset-lg-1 col-lg-6 col-md-6">
-                                <div class="demo_img">
-                                    <img src="img/demo/demo_3.png" alt="demo">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          </div>
+      <div class="swiper-slide"><img src="img/adidas" alt="">
+        <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Adidas's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Adidas's Website
+                  </label>
+                  </div>
             </div>
-        </div>
-    </section>
-    <!--::our_latest_work end::-->
+          </div>
+      <div class="swiper-slide">
+          <img src="img/levis.png" alt="">
+          <div class="btn-layout">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Levi's shop
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Levi's Website
+                  </label>
+                  </div>
+            </div>
+          </div>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
 
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div>
+
+    <!-- cta part end-->
     <!-- footer part start-->
-    <footer class="footer-area ">
+    <footer class="footer-area">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-sm-6 col-md-6 col-xl-3">
@@ -270,7 +242,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
     <!-- jquery plugins here-->
     <!-- jquery -->
-    <script src="js/jquery-1.12.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- popper js -->
     <script src="js/popper.min.js"></script>
     <!-- bootstrap js -->
@@ -288,8 +260,21 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/owl.carousel2.thumbs.min.js"></script>
     <!-- swiper js -->
     <script src="js/slick.min.js"></script>
+
     <!-- custom js -->
     <script src="js/custom.js"></script>
+    <script>
+    var swiper = new Swiper('.swiper-container', {
+        pagination: '.swiper-pagination',
+        paginationClickable: true,
+        nextButton: '.swiper-button-next',
+        prevButton: '.swiper-button-prev',
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: 2500,
+        autoplayDisableOnInteraction: false
+    });
+    </script>
 </body>
 
 </html>
