--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <div class="col-xl-6 col-md-6">
                     <div class="banner_bg">
                         <img src="img/source.gif"  alt="banner">
+                        <img src="img/white1.jpg" class="unseen">
                     </div>
                 </div>
             </div>
