--- a/index.html
+++ b/index.html
@@ -53,38 +53,9 @@
     <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img class="logo" src="img/logof1.png" alt="logo"> </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-
-                        <div class="collapse navbar-collapse main-menu-item justify-content-end"
-                            id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Welcome</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About us</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="project.html">Brands</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Help & Information
-                                    </a>
-                                   
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
+                        <a href="index.html"> <img class="logo" src="img/logof1.png" alt="logo"> </a>
+                 </div>
             </div>
-        </div>
     </header>
     <!-- Header part end-->
 
@@ -97,13 +68,16 @@
                         <div class="banner_text_iner text-center">
                             <h2>TRY ON</h2>
                             <h6>Feel your brand, From your home</h6>
-                            <a href="#" class="btn_1">Read more<i class="ti-angle-right"></i> </a>
+                            <a href="#" class="btn_2">Get your ios app
+                                <br/><i class="fab fa-app-store-ios"></i> </a>
+                            <br/>
+                            <a href="#" class="btn_2">Get your android app <br/> <i class="fab fa-android"></i> </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-6">
                     <div class="banner_bg">
-                        <img src="img/source.gif"  alt="banner">
+                        <img src="img/source.gif"  alt="banner" class="banner_img">
                         <img src="img/white1.jpg" class="unseen">
                     </div>
                 </div>
@@ -303,13 +277,15 @@
                             <div class="col-lg-12">
                                 <div class="slider owl-carousel owl-theme" id="sync1">
                                     <div class="client_review_text">
-                                        <p>STEP 1 : Create a profile (avatar) via the app
+                                        <p><b>STEP 1:</b> Create a profile (avatar) via the app
 Detection of the morphology of the person through AR.
-
-STEP 2 :Choosing a product
+                                        </p>
+                                        <p>
+<b>STEP 2:</b> Choosing a product
 Choice of clothing, shoes or accessories from partner brands. You can choose between different models, colors and sizes.
-
-STEP 3 : Try on in AR
+                                        </p>
+                                        <p>
+<b>STEP 3:</b> Try on in AR
 The user can virtually visualize the rendering of the garment from different angles.
 </p>                                         
                                     </div>
@@ -438,8 +414,7 @@ The user can virtually visualize the rendering of the garment from different ang
                         <div class="row">
                             <div class="col-lg-12">
                                 <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
                             </div>
                         </div>
                     </div>
